--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     
     <!-- Card 1 -->
     <div class="sec3-card">
-      <img src="assets/about-01.jpg" alt="Jennifer Soft" class="sec3-image">
+      <img src="about-01.jpg" alt="Jennifer Soft" class="sec3-image">
       <div class="sec3-info">
         <h3 class="sec3-name">Jennifer Soft</h3>
         <p class="sec3-role">Fondateur et PDG</p>
@@ -61,7 +61,7 @@
 
     <!-- Card 2 -->
     <div class="sec3-card">
-      <img src="assets/about-02.jpg" alt="Daisy Walker" class="sec3-image">
+      <img src="about-02.jpg" alt="Daisy Walker" class="sec3-image">
       <div class="sec3-info">
         <h3 class="sec3-name">Daisy Walker</h3>
         <p class="sec3-role">Chef exécutif</p>
@@ -75,7 +75,7 @@
 
     <!-- Card 3 -->
     <div class="sec3-card">
-      <img src="assets/about-03.jpg" alt="Florence Nelson" class="sec3-image">
+      <img src="about-03.jpg" alt="Florence Nelson" class="sec3-image">
       <div class="sec3-info">
         <h3 class="sec3-name">Florence Nelson</h3>
         <p class="sec3-role">Chef de cuisine</p>
@@ -89,7 +89,7 @@
 
     <!-- Card 4 -->
     <div class="sec3-card">
-      <img src="assets/about-04.jpg" alt="Valentina Marin" class="sec3-image">
+      <img src="about-04.jpg" alt="Valentina Marin" class="sec3-image">
       <div class="sec3-info">
         <h3 class="sec3-name">Valentina Marin</h3>
         <p class="sec3-role">Directeur culinaire</p>
@@ -144,7 +144,7 @@
 
    <section class="sec6-container">
     <div class="sec6-image">
-      <img src="assets/about-06.jpg" alt="Restaurant image">
+      <img src="about-06.jpg" alt="Restaurant image">
     </div>
     <div class="sec6-text-content">
       <h2 class="sec6-heading">Histoire de notre restaurant</h2>
@@ -160,3 +160,4 @@
 
 </body>
 </html>
+
