--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <div class="sec1-overlay">
       <div class="sec1-container">
         <div class="sec1-left">
-            <div class="sec1-logo-square"></div>
+            <div class="sec1-logo-square"><img src="simple-house-logo.png" alt="logo"></div>
           <div class="sec1-logo-box">
             <h1 class="sec1-title">Simple House</h1>
             <p class="sec1-subtitle">nouveau modèle de restaurant</p>
@@ -97,4 +97,5 @@
 </section>
 
   </body>
+
 </html>
