--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <div class="sec1-overlay">
       <div class="sec1-container">
         <div class="sec1-left">
-            <div class="sec1-logo-square"></div>
+           <div class="sec1-logo-square"><img src="simple-house-logo.png" alt="logo"></div>
           <div class="sec1-logo-box">
             <h1 class="sec1-title">Maison Simple</h1>
             <p class="sec1-subtitle">nouveau modèle de restaurant</p>
@@ -160,4 +160,5 @@
 
 </body>
 </html>
+
 
