--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,11 @@
   </div>
 </section>
 
+  <footer class="home2-footer">
+  <p> Copyright &copy; 2025 Simple House | Design</p>
+</footer>
+
   </body>
 
 </html>
+
