--- a/about.html
+++ b/about.html
@@ -157,8 +157,12 @@
     </div>
   </section>
 
+  <footer class="home2-footer">
+  <p> Copyright &copy; 2025 Simple House | Design</p>
+</footer>
 
 </body>
 </html>
+
 
 
