--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="sec1-overlay">
       <div class="sec1-container">
         <div class="sec1-left">
-            <div class="sec1-logo-square"><img src="assets/simple-house-logo.png" alt="logo"></div>
+            <div class="sec1-logo-square"><img src="simple-house-logo.png" alt="logo"></div>
           <div class="sec1-logo-box">
             <h1 class="sec1-title">Simple House</h1>
             <p class="sec1-subtitle">nouveau modèle de restaurant</p>
@@ -121,3 +121,4 @@
 
 </body>
 </html>
+
