--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </div>
         <nav class="sec1-nav">
           <ul class="sec1-nav-list">
-            <li class="sec1-nav-item"><a href="#" class="sec1-nav-link">Maison</a></li>
+            <li class="sec1-nav-item"><a href="index.html" class="sec1-nav-link">Home</a></li>
             <li class="sec1-nav-item"><a href="about.html" class="sec1-nav-link sec1-active">About</a></li>
             <li class="sec1-nav-item"><a href="contact.html" class="sec1-nav-link">Contact</a></li>
           </ul>
@@ -163,6 +163,7 @@
 
 </body>
 </html>
+
 
 
 
